minor fix to make things a bit better on mobile

--- a/styles/components/parallax-background/_parallax-background.scss
+++ b/styles/components/parallax-background/_parallax-background.scss
@@ -10,9 +10,9 @@
     z-index: -1;
 
     &__layer {
+        bottom: 0;        
         left: 0;
         position: absolute;
-        top: 0;        
         width: 100%;
     }
 }
